data/derived/sp14/progs/unify/prog3111.ml.out
Characters 29-36:
  wwhile (f b = b,b);;
          ^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
